1. Add immutables 2. Add localized time 3. Add BaseEntity & BaseProjection 4. Add Scalar Projections 5. Make projections interfaces 6. Improve JpaGrid by making it more explicit 7. Add CoreJpaRepository 8. Add Country 9. Fix auditing when switching threads by introducing DelegatingSecurityVirtualThreadExecutorService 10. Introduce GoogleWordAssembler that assigns speaker labels to works with much better accuracy when switching speakers 11. Remove reflection related to Projectio Interfaces